Fix vertical overflow in header

--- a/source/stylesheets/sections/_header.sass
+++ b/source/stylesheets/sections/_header.sass
@@ -43,7 +43,8 @@ $h-pad: 1rem
 .h--bot
   text-align: center
   position: absolute
-  width: 100%
+  left: 0
+  right: 0
   bottom: $h-pad
 
 .h--mid
